# cli

./: Cargo.toml  README.md
src/: components.rs  events.rs  main.rs  module.rs  project.rs  utils.rs
templates/: component_def.cpp  components.cpp  components.hpp  components.lua
templates/module/: components.toml  main.cpp
templates/project/: components.toml  config.toml  default_scene.toml  events.lua  events.toml  feature_config.toml  feature_script.lua  game.toml  player_script.lua  player_template.toml
